<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="32dp"
    tools:context=".features.payment.PaymentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_location_pointer"
        app:layout_constraintTop_toBottomOf="@+id/iv_location_pointer">

        <ImageView
            android:id="@+id/iv_location_pointer"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_location_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_delivery_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Delivery location"
            android:textColor="@color/neutral_900"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_location_pointer"
            app:layout_constraintTop_toTopOf="@id/iv_location_pointer" />

        <TextView
            android:id="@+id/tv_delivery_pointer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/home"
            android:textColor="@color/neutral_900"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            app:layout_constraintStart_toStartOf="@id/tv_delivery_location"
            app:layout_constraintEnd_toEndOf="@id/tv_delivery_location"
            app:layout_constraintTop_toBottomOf="@id/tv_delivery_location"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="12dp"
        android:background="#F1F5F9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp">

        <ImageView
            android:id="@+id/iv_driver_order"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_driver_order"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tv_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginStart="6dp"
            android:text="Delivery"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/iv_driver_order"
            app:layout_constraintTop_toTopOf="@id/iv_driver_order"/>

        <TextView
            android:id="@+id/tv_estimated_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Delivered in 3 days"
            android:textSize="10sp"
            app:layout_constraintTop_toBottomOf="@id/tv_order"
            app:layout_constraintStart_toStartOf="@id/tv_order"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#F1F5F9" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="12dp"
        android:paddingVertical="8dp"
        android:paddingHorizontal="24dp"
        android:backgroundTint="@color/secondary_50">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_900"
                android:text="@string/shipping_detail"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:text="@string/price"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="42000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:text="@string/shipping_cost"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_shipping_cost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="42000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:text="@string/admin"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_admin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/neutral_900"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="42000"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/neutral_900"
                    android:textSize="16sp"
                    android:text="@string/total"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semibold"
                    android:textColor="@color/error_700"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:gravity="end"
                    tools:text="Rp42.000"/>

            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="12dp"
        android:background="#F1F5F9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/payment_methods"
            android:textColor="@color/neutral_900"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_payment_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/tv_payment_method"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confirm_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="14dp"
        android:text="@string/confirm"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:enabled="false"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/rv_payment_method"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</LinearLayout>